// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DialogWrapper renders with base props 1`] = `
<div
  className="lab-dialog lab-dialog--message
            "
>
  <div />
</div>
`;

exports[`DialogWrapper test with isLarge false 1`] = `
[
  <div
    className="lab-dialog-overlay"
    onClick={[MockFunction]}
    role="presentation"
  />,
  <div
    className="lab-dialog lab-dialog--message
            "
  >
    <div />
  </div>,
]
`;

exports[`DialogWrapper test with isMessageDialog false 1`] = `
[
  <div
    className="lab-dialog-overlay"
    onClick={[MockFunction]}
    role="presentation"
  />,
  <div
    className="lab-dialog lab-dialog--standard
             lab-dialog--large"
  >
    <div />
  </div>,
]
`;

exports[`DialogWrapper test with isModal false 1`] = `
<div
  className="lab-dialog lab-dialog--message
             lab-dialog--large"
>
  <div />
</div>
`;

exports[`DialogWrapper test with isOpen false 1`] = `
<div
  className="lab-dialog lab-dialog--message
             lab-dialog--large"
>
  <div />
</div>
`;
